# ai-recepcionist

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Documentation.md  Implement.md  Plan.md  Prompt.md  README.md  docker-compose.yml  pyproject.toml
agi/: __init__.py  generate_name_audio.py  generate_optima_audio.py  generate_personalized_prompt.py  load_lead_context.py  resolve_transfer_target.py  vosk_cobranza.py
asterisk/: audio_format.md  client_flow_9912_static_prompts.placeholder.md  extensions_custom.conf.sample  extensions_lab.conf.sample  pjsip_lab.conf.sample
config/: blocklist.sample.yml  intents.yml  ivr.yml  lab_leads.yml  lead_context.sample.csv  logging.yml  routing.yml  scenarios.yml  semantic_intents.yml
docs/: AUDIO_PROMPTS.md  CALL_FLOW.md  CLIENT_FLOW_9912.md  INSTALL.md  INTENT_SCENARIOS_COBRANZA.md  LAB_ASTERISK_UBUNTU.md  NIVEL_1_IVR_ROBUSTO.md  PRODUCTION_CHECKLIST.md  TROUBLESHOOTING.md  VICIDIAL_SETUP.md  architecture.md  runbook.md
scripts/: apply_lab_elevenlabs_flow.sh  check_vosk.sh  evaluate_intents.py  generate_elevenlabs_optima_prompts.py  generate_lab_prompts.sh  generate_optima_9913_elevenlabs_audio.py  generate_optima_elevenlabs_prompts.py  generate_test_wavs.md  install_agi.sh  report_ivr_calls.py  test_audio_file.py  test_client_flow_prompts.py  test_intent_matrix.py  test_name_cache.py
src/: __init__.py
tests/: conftest.py  test_agi_runtime.py  test_audio.py  test_audio_file_script.py  test_blocklist.py  test_client_flow_9912.py  test_client_flow_audio.py  test_config_loader.py  test_decision_engine.py  test_eagi_app.py  test_env_file.py  test_evaluate_intents_script.py  test_generate_elevenlabs_optima_prompts_script.py  test_generate_name_audio_agi.py  test_generate_optima_9913_elevenlabs_audio_script.py  test_generate_optima_audio_agi.py  test_generate_optima_elevenlabs_prompts_script.py  test_generate_personalized_prompt_agi.py  test_intent_classifier.py  test_lab_integration.py  test_lead_context.py  test_load_lead_context_agi.py  test_logging_utils.py  test_name_audio_cache.py  test_optima_9913_lab_audio.py  test_optima_audio_cache.py  test_prompt_builder.py  test_reporting.py  test_resolve_transfer_target_agi.py  test_routing.py  test_test_client_flow_prompts_script.py  test_test_name_cache_script.py  test_vosk_client.py
(+32 files in other folders)
